# Gym__Data

./: .env.example  README.md  STARTUP_FLOW.md  compose.yaml  project_structure.md  project_structure_ru.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  analytics.py  exercises.py  health.py  measurements.py  profile.py  summary.py  workouts.py
backend/app/core/: config.py
backend/app/db/: __init__.py  clickhouse.py  postgres.py
backend/app/domain/: __init__.py  context_registry.py
backend/app/services/: analytics_service.py  exercise_service.py  health_service.py  measurement_refresh_service.py  measurement_service.py  measurement_write_service.py  profile_service.py  serialization.py  summary_service.py  workout_service.py
backend/app/ui/: app.js  index.html  styles.css
backend/tests/: test_api.py  test_measurements_api.py  test_profile_api.py  test_ui.py
ingestion/: Dockerfile  pyproject.toml
ingestion/gym_data_ingestion/: __init__.py  measurement_analytics.py  measurement_flat_files.py  measurement_models.py  measurement_reconciliation.py  models.py  reconciliation.py  settings.py
ingestion/gym_data_ingestion/cli/: __init__.py  main.py
ingestion/gym_data_ingestion/loaders/: __init__.py  clickhouse.py  postgres.py
ingestion/gym_data_ingestion/validation/: __init__.py  schema.py
ingestion/tests/: test_measurement_analytics.py  test_measurement_models.py  test_measurement_reconciliation.py  test_models.py  test_reconciliation.py
(+94 files in other folders)
