[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-data-ingestion"
version = "0.1.0"
description = "Gym__Data ingestion service"
requires-python = ">=3.12"
dependencies = [
  "clickhouse-connect>=0.8,<1.0",
  "jsonschema>=4.23,<5.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gym_data_ingestion*"]

